--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance System</title>
+    <title>Login - Attendance System</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
             background-color: #f4f4f4;
         }
         .container {
-            max-width: 600px;
+            max-width: 400px;
             margin: auto;
             background: white;
             padding: 20px;
@@ -22,49 +22,48 @@
         h1 {
             text-align: center;
         }
-        .nav {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-top: 20px;
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ddd;
+            border-radius: 5px;
         }
-        .nav a, .logout-btn {
-            display: block;
+        button {
+            width: 100%;
             background-color: #007bff;
             color: white;
             padding: 10px;
+            border: none;
             border-radius: 5px;
-            text-decoration: none;
-            text-align: center;
             cursor: pointer;
         }
-        .nav a:hover, .logout-btn:hover {
+        button:hover {
             background-color: #0056b3;
-        }
-        .logout-btn {
-            background-color: #dc3545;
-            margin-top: 20px;
-            border: none;
-        }
-        .logout-btn:hover {
-            background-color: #c82333;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Attendance System</h1>
-        <div class="nav">
-            <a href="student_dashboard.html">Student Attendance Dashboard</a>
-            <a href="teacher_dashboard.html">Teacher Attendance Dashboard</a>
-            <a href="attendance_hub.html">Main Attendance Hub</a>
-            <button class="logout-btn" onclick="logout()">Logout</button>
-        </div>
+        <h1>Login</h1>
+        <form onsubmit="return loginUser()">
+            <input type="text" id="username" placeholder="Username" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
     </div>
 
     <script>
-        function logout() {
-            window.location.href = "login.html";
+        function loginUser() {
+            let username = document.getElementById("username").value;
+            let password = document.getElementById("password").value;
+            
+            if (username === "admin" && password === "password") {
+                window.location.href = "index.html";
+            } else {
+                alert("Invalid credentials! Try again.");
+            }
+            return false;
         }
     </script>
 </body>
