--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <body>
     <div class="container">
         <h1>Login</h1>
+        <p>Username: admin</p>
+        <p>Password: password</p>
         <form onsubmit="return loginUser()">
             <input type="text" id="username" placeholder="Username" required>
             <input type="password" id="password" placeholder="Password" required>
