--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             let password = document.getElementById("password").value;
             
             if (username === "admin" && password === "password") {
-                window.location.href = "index.html";
+                window.location.href = "Home.html";
             } else {
                 alert("Invalid credentials! Try again.");
             }
