--- a/Home.html
+++ b/Home.html
@@ -64,7 +64,7 @@
 
     <script>
         function logout() {
-            window.location.href = "login.html";
+            window.location.href = "index.html";
         }
     </script>
 </body>
